(executable
 (name server)
 (public_name opeg_server)
 (package opeg_server)
 (libraries rpclib rpclib.json zmq lib)
 (preprocess 
  (pps ppx_deriving_rpc)))


; (library
;  (name opegServer)
;  (public_name opegServer)
;  (libraries yojson ppx_deriving_yojson.runtime rpclib rpclib.json)
;  (preprocess (pps ppx_deriving_yojson)))
